bug fixing. only generates required stuff